added edit/delete buttons

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -70,3 +70,25 @@ nav ul li a:hover {
     justify-content: center;
 }
 
+.post__title {
+    display: flex;
+    align-items: center;
+}
+
+.post__link-edit {
+    margin-left: 10px;
+}
+
+.post__link-edit img {
+    height: 15px;
+    width: 15px;
+}
+
+.post__link-trash {
+    margin-left: auto;
+}
+
+.post__link-trash img {
+    height: 30px;
+    width: 30px;
+}
