--- a/public/style/style.css
+++ b/public/style/style.css
@@ -99,3 +99,9 @@ nav ul li a:hover {
     height: 30px;
     width: 30px;
 }
+
+.validation__toast-image {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+}
